--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-*.fastq
 *.gtf
-
-
+.Rprohistory 
+.Rproj.user 
+.RData 
+.Ruserdata 
+*.bam 
+*.pdf 
+*.Rproj 
+*results* 
+*figures*
+*bam* 
+*.tmp 
+*html 
+*.bed 
+*_rslurm*
+*.chain
